Header Markup Done

--- a/index.html
+++ b/index.html
@@ -25,8 +25,34 @@
     </style>
 </head>
 
-<body>
+<body class=".primary-font">
+    <!-- Header Start -->
+    <header class="pl-52 pt-11 pr-16 pb-48 w-full">
 
+        <!-- left banner -->
+        <div class="w-1/2">
+            <div class="space-y-[80px]">
+                <h1 class="text-7xl">It's good <br>
+                    tea time at The <br>
+                    Tea House
+                </h1>
+                <p class="text-lg">
+                    Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
+                </p>
+            </div>
+            <div>
+                <button>
+                    <p>Explore More</p>
+                    <img src="images/arrow.png" alt="Arrow" width="22px" height="22px">
+                </button>
+            </div>
+        </div>
+
+        <!-- right banner -->
+        <div class="w-1/2">
+            <img src="images/banner.png" alt="Banner Image" width="1500px" height="auto">
+        </div>
+    </header>
 
 
 
