Header Few Design

--- a/index.html
+++ b/index.html
@@ -22,17 +22,22 @@
         .praimary-font {
             font-family: 'Manrope', sans-serif;
         }
+
+        .btn{
+            background: linear-gradient(270deg, #F00 0%, #FF8938 100%);
+        }
     </style>
 </head>
 
 <body class=".primary-font">
     <!-- Header Start -->
-    <header class="pl-52 pt-11 pr-16 pb-48 w-full">
+    <!-- pl-52 pt-11 pr-16 pb-48 w-full -->
+    <header class="container mx-auto pt-11 flex justify-between items-center">
 
         <!-- left banner -->
-        <div class="w-1/2">
-            <div class="space-y-[80px]">
-                <h1 class="text-7xl">It's good <br>
+        <div class="w-1/2 space-y-[60px]">
+            <div class="space-y-[60px]">
+                <h1 class="text-7xl font-extrabold ">It's good <br>
                     tea time at The <br>
                     Tea House
                 </h1>
@@ -40,8 +45,8 @@
                     Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                 </p>
             </div>
-            <div>
-                <button>
+            <div class="">
+                <button class=".btn w-48 h-16 rounded-lg text-white text-xl space-x-2 bg-orange-600 flex justify-center items-center">
                     <p>Explore More</p>
                     <img src="images/arrow.png" alt="Arrow" width="22px" height="22px">
                 </button>
