Header Design Done

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             font-family: 'Manrope', sans-serif;
         }
 
-        .btn{
+        .btn {
             background: linear-gradient(270deg, #F00 0%, #FF8938 100%);
         }
     </style>
@@ -41,12 +41,13 @@
                     tea time at The <br>
                     Tea House
                 </h1>
-                <p class="text-lg">
+                <p class="text-lg opacity-55">
                     Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                 </p>
             </div>
             <div class="">
-                <button class=".btn w-48 h-16 rounded-lg text-white text-xl space-x-2 bg-orange-600 flex justify-center items-center">
+                <button
+                    class=".btn w-48 h-16 rounded-lg text-white text-xl space-x-2 bg-orange-600 flex justify-center items-center">
                     <p>Explore More</p>
                     <img src="images/arrow.png" alt="Arrow" width="22px" height="22px">
                 </button>
@@ -55,7 +56,17 @@
 
         <!-- right banner -->
         <div class="w-1/2">
-            <img src="images/banner.png" alt="Banner Image" width="1500px" height="auto">
+            <div class="relative">
+                <img src="images/banner.png" alt="Banner Image" width="1500px" height="auto">
+            </div>
+            <div class="absolute top-[400px] right-[435px] bg-white shadow-md rounded-lg w-60 h-24 bg-opacity-6 p-6 flex gap-3 items-center">
+                <img src="images/Group 5.png" width="40px" height="37px">
+                <div>
+                    <h5 class="text-3xl font-semibold">5.00</h5>
+                    <p class="text-sm opacity-55">Trust Pilot Ratings</p>
+                </div>
+            </div>
+
         </div>
     </header>
 
