--- a/index.html
+++ b/index.html
@@ -90,69 +90,94 @@
             </div> -->
 
             </div>
-            </divc>
+        </div>
     </header>
 
     <!-- Our Featured Section -->
-    <main class="border-4 border-pink-200 container mx-auto w-full pl-4 md:pl-48 pt-11 pr-16 pb-40">
-        <div class="border-4 border-pink-200 text-center px-6 md:px-72 space-y-3">
-            <h1 class="text-4xl md:text-[2.8em] font-semibold">Our Featured Products</h1>
-            <p>
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                alteration in some form, by injected humour, or randomised words which don't look even slightly
-                believable.
-            </p>
-        </div>
-        <!-- card 1 -->
-        <div class="w-1/2 border-4 border-fuchsia-400 pt-14">
-            <div class=" md:w-64 md:h-96 pt-10 bg-slate-50  flex flex-col justify-center 
+    <!-- w-full pl-4 md:pl-48 pt-11 pr-16 pb-40 -->
+    <main class="1 mt-8 border-2 border-green-500 container mx-auto">
+        <div class="2">
+            <div class="3 border-2 border-pink-900 text-center px-6 md:px-64 space-y-3">
+                <h1 class=" text-4xl md:text-[2.8em] font-semibold">Our Featured Products</h1>
+                <p>
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even slightly
+                    believable.
+                </p>
+            </div>
+
+            <!-- card 1 -->
+            <div class="card grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-16 justify-center content-center">
+                <div class="card w-64 shadow-xl bg-gradient-to-t from-transparent to-slate-200">
+                    <figure class="px-2 pt-8">
+                        <img src="images/tea-1.png" alt="Tea-1" />
+                    </figure>
+                    <div class="card-body justify-center items-center text-center">
+                        <h2 class="text-2xl text-center font-semibold pb-3">Milk Tea</h2>
+                        <p class="text-[13px] opacity-80 max-w-48">Creamer could be replaced by fresh milk</p>
+                        <div class="">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- card 2 -->
+                <div class="card w-64 shadow-xl bg-gradient-to-t from-transparent to-slate-200">
+                    <figure class="px-2 pt-8">
+                        <img src="images/tea-1.png" alt="Tea-1" />
+                    </figure>
+                    <div class="card-body justify-center items-center text-center">
+                        <h2 class="text-2xl text-center font-semibold pb-3">Milk Tea</h2>
+                        <p class="text-[13px] opacity-80 max-w-48">Creamer could be replaced by fresh milk</p>
+                        <div class="">
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <!-- Card 3 -->
+                <div class="card w-64 shadow-xl bg-gradient-to-t from-transparent to-slate-200">
+                    <figure class="px-2 pt-8">
+                        <img src="images/tea-1.png" alt="Tea-1" />
+                    </figure>
+                    <div class="card-body justify-center items-center text-center">
+                        <h2 class="text-2xl text-center font-semibold pb-3">Milk Tea</h2>
+                        <p class="text-[13px] opacity-80 max-w-48">Creamer could be replaced by fresh milk</p>
+                        <div class="">
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- Card 4 -->
+                <div class="card w-64 shadow-xl bg-gradient-to-t from-transparent to-slate-200">
+                    <figure class="px-2 pt-8">
+                        <img src="images/tea-1.png" alt="Tea-1" />
+                    </figure>
+                    <div class="card-body justify-center items-center text-center">
+                        <h2 class="text-2xl text-center font-semibold pb-3">Milk Tea</h2>
+                        <p class="text-[13px] opacity-80 max-w-48">Creamer could be replaced by fresh milk</p>
+                        <div class="">
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+            <!-- <div class="card border-4 border-blue-700">
+            <div class="4 w-1/2 border-4 border-fuchsia-700">
+                <div class="6 md:w-64 md:h-96 pt-10 bg-slate-50  flex flex-col justify-center 
             items-center bg-gradient-to-t from-transparent to-slate-200 ">
-                <img class="pb-8" src="images/tea-1.png" width="130px" height="205px">
-            </div>
+                    <img class="pb-8" src="images/tea-1.png" width="130px" height="205px">
+                </div>
 
-            <div class="">
-                <h3 class="text-2xl text-center font-semibold pb-3">Milk Tea</h3>
-                <p class="text-center text-[13px] opacity-80">Creamer could be replaced by fresh milk</p>
-            </div>
-        </div>
-
-        <div class="pt-14">
-            <div class=" md:w-64 md:h-96 pt-10 bg-slate-50  flex flex-col justify-center 
-            items-center bg-gradient-to-t from-transparent to-slate-200 ">
-                <img class="pb-8" src="images/tea-1.png" width="130px" height="205px">
-            </div>
-
-            <div class="">
-                <h3 class="text-2xl text-center font-semibold pb-3">Milk Tea</h3>
-                <p class="text-center text-[13px] opacity-80">Creamer could be replaced by fresh milk</p>
+                <div class="5">
+                    <h3 class="text-2xl text-center font-semibold pb-3">Milk Tea</h3>
+                    <p class="text-center text-[13px] opacity-80">Creamer could be replaced by fresh milk</p>
+                </div>
             </div>
         </div>
-
-        <div class="pt-14">
-            <div class=" md:w-64 md:h-96 pt-10 bg-slate-50  flex flex-col justify-center 
-            items-center bg-gradient-to-t from-transparent to-slate-200 ">
-                <img class="pb-8" src="images/tea-1.png" width="130px" height="205px">
-            </div>
-
-            <div class="">
-                <h3 class="text-2xl text-center font-semibold pb-3">Milk Tea</h3>
-                <p class="text-center text-[13px] opacity-80">Creamer could be replaced by fresh milk</p>
-            </div>
-        </div>
-
-        <div class="pt-14">
-            <div class=" md:w-64 md:h-96 pt-10 bg-slate-50  flex flex-col justify-center 
-            items-center bg-gradient-to-t from-transparent to-slate-200 ">
-                <img class="pb-8" src="images/tea-1.png" width="130px" height="205px">
-            </div>
-
-            <div class="">
-                <h3 class="text-2xl text-center font-semibold pb-3">Milk Tea</h3>
-                <p class="text-center text-[13px] opacity-80">Creamer could be replaced by fresh milk</p>
-            </div>
-        </div>
-
-
+        </div> -->
     </main>
 
 
