--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     text-xl space-x-2 bg-orange-600 flex justify-center 
                     items-center">
                         <p>Explore More</p>
-                        <img src="images/arrow.png" alt="Arrow" width="22px" height="22px">
+                        <img src="./images/arrow.png" alt="Arrow" width="22px" height="22px">
                     </button>
                 </div>
             </div>
